<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="gms_app_name">MicroG</string>
    <string name="gms_settings_name">MicroG Settings</string>
    <string name="gms_settings_summary">Setup MicroG services</string>
    <string name="just_a_sec">Just a sec…</string>
    <string name="google_account_label">Google</string>
    <string name="ask_permission_tos">By continuing, you allow this app and Google to use your information in accordance with their respective terms of service and privacy policies</string>
    <string name="ask_scope_permission_title"><xliff:g example="F-Droid">%1$s</xliff:g> would like to:</string>
    <string name="ask_service_permission_title"><xliff:g example="F-Droid">%1$s</xliff:g> would like to use:</string>
    <string name="account_manager_title">Google Account Manager</string>
    <string name="sorry">Sorry…</string>
    <string name="auth_before_connect">"An app on your device is trying to sign in to a Google account.

If this was intentional, use the <b>Sign in</b> button to connect to Google sign-in page. Press <b>Huawei</b> to sign-in to a device from this manufacturer"</string>
    <string name="auth_sign_in">Sign in</string>
    <string name="auth_connecting">"Your device is establishing a connection to Google’s servers to sign you in.

This can take a few seconds"</string>
    <string name="no_network_error_desc">"You don’t have a network connection.

This could be a temporary problem or your Android device may not be provisioned for data services. Try again when connected to a mobile network, or connect to a Wi-Fi network"</string>
    <string name="auth_general_error_desc">"There was a problem communicating with Google servers.

Try again later"</string>
    <string name="auth_finalize">"Your device is contacting Google to save information to your account.

This can take a couple of minutes"</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="auth_notification_title">Authentication required</string>
    <string name="auth_notification_content"><xliff:g example="F-Droid">%1$s</xliff:g> requires your authorization to access your Google account</string>
    <string name="signin_picker_title">Choose an account</string>
    <string name="signin_picker_subtitle">to continue to <xliff:g example="F-Droid">%1$s</xliff:g></string>
    <string name="signin_picker_add_account_label">Add another account</string>
    <string name="signin_confirm_title">Allow to sign you in to <xliff:g example="F-Droid">%1$s</xliff:g></string>
    <string name="signin_confirm_button_text">Allow and share</string>
    <string name="signin_subtext_sharing">To continue, MicroG will share name, email address and profile picture of your Google Account with <xliff:g example="F-Droid">%1$s</xliff:g></string>
    <string name="signin_subtext_policy">Before using this app, review its %1$s and %2$s</string>
    <string name="signin_subtext_policy_privacy">privacy policy</string>
    <string name="signin_subtext_policy_terms">terms of service</string>
    <string name="perm_status_broadcast_label">listen to internal status broadcasts</string>
    <string name="perm_gsf_read_gservices_label">read Google service configuration</string>
    <string name="perm_c2dm_receive_label">listen to C2DM messages</string>
    <string name="perm_c2dm_send_label">send C2DM messages to other apps</string>
    <string name="perm_gtalk_svc_label">exchange messages and receive sync notifications from Google servers</string>
    <string name="perm_extended_access_label">Extended access to Google services</string>
    <string name="perm_provision_label">provision MicroG services</string>
    <string name="perm_provision_description">Allows the app to configure MicroG services without user interaction</string>
    <string name="service_name_checkin">Google device registration</string>
    <string name="service_name_mcs">Cloud Messaging</string>
    <string name="service_name_snet">Google SafetyNet</string>
    <string name="games_title">Google Play Games</string>
    <string name="games_info_title"><xliff:g example="F-Droid">%1$s</xliff:g> would like to use Play Games</string>
    <string name="games_info_content">To use Play Games it is required to install the Google Play Games app. The application might continue without Play Games, but it is possible that it will behave unexpectedly</string>
    <string name="pick_place_title">Pick a place</string>
    <string name="pick_place_desc">Place picker is not yet available</string>
    <string name="place_picker_select_title">Select this location</string>
    <string name="place_picker_nearby_places">Nearby places</string>
    <string name="place_picker_location_lat_lng">(%1$.7f, %2$.7f)</string>
    <string name="lacking_permission_toast">MicroG Services: Lacking permission to <xliff:g example="have full network acccess">%1$s</xliff:g></string>
    <string name="network_type_mobile">Mobile network</string>
    <string name="network_type_wifi">Wi-Fi</string>
    <string name="network_type_roaming">Roaming</string>
    <string name="network_type_other">Other networks</string>
    <string name="self_check_cat_fake_sig">Signature spoofing support</string>
    <string name="self_check_cat_gms_packages">Installed packages</string>
    <string name="self_check_cat_system">System</string>
    <string name="self_check_name_fake_sig_perm">System has signature spoofing support: </string>
    <string name="self_check_resolution_fake_sig_perm">Your ROM has no native support for signature spoofing. You can still use Xposed or other systems to spoof signature. Please check the documentation on which ROMs do support signature spoofing and how to use MicroG on ROMs that do not</string>
    <string name="self_check_name_perm_granted">System grants signature spoofing permission: </string>
    <string name="self_check_resolution_perm_granted">This is a strong indicator that the ROM does support signature spoofing, but requires further action to activate it. Please check the documentation on which steps might be required</string>
    <string name="self_check_name_system_spoofs">System spoofs signature: </string>
    <string name="self_check_resolution_system_spoofs">Please check the documentation on which steps might be required</string>
    <string name="self_check_pkg_gms">Play Services (GmsCore)</string>
    <string name="self_check_pkg_vending">Play Store (Phonesky)</string>
    <string name="self_check_pkg_gsf">Services Framework (GSF)</string>
    <string name="self_check_name_app_installed"><xliff:g example="F-Droid">%1$s</xliff:g> installed: </string>
    <string name="prefcat_google_services">Google Services</string>
    <string name="pref_auth_trust_google_title">Trust Google for app permissions</string>
    <string name="pref_auth_trust_google_summary">When disabled, the user is asked before an apps authorization request is sent to Google. Some applications will fail to use the Google account if this is disabled</string>
    <string name="pref_auth_visible_title">Allow apps to find accounts</string>
    <string name="pref_auth_visible_summary">When enabled, all applications on this device will be able to see email address of your Google Accounts without prior authorization</string>
    <string name="pref_auth_include_android_id_title">Authenticate with device registration</string>
    <string name="pref_auth_include_android_id_summary">When disabled, authentication requests won\'t be linked to the device registration, which allows unauthorized devices to sign in, but may have unforeseen consequences</string>
    <string name="pref_add_account_title">Accounts</string>
    <string name="pref_add_account_summary">Login in new Google account</string>
    <string name="pref_about_title">About MicroG</string>
    <string name="pref_accounts_summary">Add and manage Google accounts</string>
    <string name="prefcat_accounts_options_title">Options</string>
    <string name="prefcat_accounts_login_accounts_title">Logged in</string>
    <string name="pref_accounts_add_account_title">Add account</string>
    <string name="pref_accounts_manage_accounts_title">Manage accounts</string>
    <string name="pref_accounts_manage_accounts_summary">Open device accounts manager</string>
    <string name="github">GitHub</string>
    <string name="github_source">Source code repository</string>
    <string name="github_link">https://github.com/Blawuken/MicroG-Extended</string>
    <string name="pref_hide_launcher_icon">Hide icon in launcher</string>
    <string name="extended_misc">Misc</string>
    <string name="uwu_microg">Credits MicroG</string>
    <string name="uwu_about_title">What is MicroG Extended?</string>
    <string name="uwu_about_summary">microG Services is a FLOSS (Free/Libre Open Source Software) framework to allow applications designed for Google Play Services to run on systems, where Play Services is not available.</string>
    <string name="uwu_switch_title">Enable links</string>
    <string name="uwu_switch_info">Turn it on to enable the actions below</string>
    <string name="uwu_controller_cat">Controller</string>
    <string name="uwu_modder_cat">Modder</string>
    <string name="uwu_material_design_cat">Material design</string>
    <string name="uwu_resources_guides_cat">Resources &amp; Guides</string>
    <string name="uwu_big_thanks_cat">Big thanks</string>
    <string name="uwu_title_7">Allive Prjct Update</string>
    <string name="uwu_info_7">Channel</string>
    <string name="uwu_title_8">Anu Bareng Channel</string>
    <string name="uwu_info_8">Channel</string>
    <string name="uwu_title_9">GIAT DUNXTENX</string>
    <string name="uwu_info_9">Tester</string>
    <string name="uwu_title_10">Hitori Gotō</string>
    <string name="uwu_info_10">Helping</string>
    <string name="uwu_title_11">Yaddy KAKKOII</string>
    <string name="uwu_info_11">Tester</string>
    <string name="uwu_title_12">Yuki🌿</string>
    <string name="uwu_info_12">Fixed mistranslations</string>
    <string name="uwu_title_15">Allive</string>
    <string name="uwu_info_15">Group</string>
    <string name="uwu_title_16">Anu Bareng</string>
    <string name="uwu_info_16">Group</string>
    <string name="uwu_title_18">PROJEN | TALK, REPORT &amp; DISCUSS</string>
    <string name="uwu_info_18">Group</string>
    <string name="uwu_title_19">iDanX</string>
    <string name="uwu_info_19">Channel</string>
    <string name="uwu_title_20">TADIKA MESRA CHANNEL</string>
    <string name="uwu_info_20">Channel</string>
    <string name="uwu_title_21">TADIKA MESRA</string>
    <string name="uwu_info_21">Group</string>
    <string name="uwu_title_22">Newbie Permanen | Angeldust</string>
    <string name="uwu_info_22">Channel</string>
    <string name="uwu_title_23">evillium prjct°</string>
    <string name="uwu_info_23">Channel</string>
    <string name="uwu_title_24">PROJEN | ANNOUNCEMENT</string>
    <string name="uwu_info_24">Channel</string>
    <string name="uwu_title_25">Allive Nitip File</string>
    <string name="uwu_info_25">Channel</string>
    <string name="uwu_title_26">ABu</string>
    <string name="uwu_info_26">Tester</string>
    <string name="uwu_title_27">S A I T A M A</string>
    <string name="uwu_info_27">Tester</string>
    <string name="uwu_info_29">Channel</string>
    <string name="uwu_info_30">Group</string>
    <string name="uwu_info_31">Channel</string>
    <string name="uwu_title_29">ANDROID RESOURCE ID</string>
    <string name="uwu_title_30">ANDROID RESOURCE ID (discussion)</string>
    <string name="uwu_title_31">TJ</string>
    <string name="uwu_info_32">Channel</string>
    <string name="uwu_title_32">⚡</string>
    <string name="uwu_title_33">Weeabooify</string>
    <string name="uwu_info_33">User interface reference</string>
    <string name="uwu_title_34">スクロース</string>
    <string name="uwu_info_34">Sepuh</string>
</resources>