<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:layout="@layout/uwu_lonte_google"
        android:selectable="false" />

    <PreferenceCategory
        android:key="prefcat_current_accounts"
        android:title="@string/prefcat_accounts_login_accounts_title"
        android:visibility="gone" />

    <PreferenceCategory
        android:key="prefcat_account_settings"
        android:title="@string/prefcat_accounts_options_title">

        <Preference
            android:icon="@drawable/ic_add_new_account"
            android:key="pref_add_account"
            android:layout="@layout/uwu_top"
            android:summary="@string/pref_add_account_summary"
            android:title="@string/pref_accounts_add_account_title" />

        <Preference
            android:icon="@drawable/uwu_dns"
            android:layout="@layout/uwu_mid"
            android:key="pref_legacy_accounts"
            android:title="@string/account_manager_title"
            android:summary="@string/account_manager_summary" />

        <Preference
            android:icon="@drawable/ic_manage_account"
            android:layout="@layout/uwu_bot"
            android:title="@string/pref_accounts_manage_accounts_title"
            android:key="pref_manage_accounts"
            android:summary="@string/pref_accounts_manage_accounts_summary" />

    </PreferenceCategory>
</PreferenceScreen>