<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2013-2017 microG Project Team
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        android:layout="@layout/uwu_banner"
        android:selectable="false" />
    <Preference
        android:layout="@layout/uwu_banner_bottom"
        android:selectable="false" />
    <Preference
        android:icon="@drawable/uwu_check"
        android:layout="@layout/uwu_maintainer"
        android:title="@string/self_check_title"
        android:summary="@string/self_check_desc">
        <intent
            android:targetPackage="@string/var_pref_start_gms_package"
            android:targetClass="org.microg.gms.ui.SelfCheckFragment$AsActivity" />
    </Preference>
    <PreferenceCategory
        android:title="@string/prefcat_google_services">
        <Preference
            android:icon="@drawable/ic_add_account"
            android:layout="@layout/card_top"
            android:title="@string/pref_add_account_title"
            android:key="pref_accounts"
            android:summary="@string/pref_accounts_summary" />
        <Preference
            android:icon="@drawable/ic_device_login"
            android:layout="@layout/card_middle"
            android:title="@string/service_name_checkin"
            android:key="pref_checkin" />
        <Preference
            android:icon="@drawable/ic_cloud_bell"
            android:layout="@layout/card_bottom"
            android:title="@string/service_name_mcs"
            android:key="pref_gcm" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/extended_misc">
        <SwitchPreference
            android:icon="@drawable/ic_hide_launcher_icon"
            android:layout="@layout/card_top"
            android:title="@string/pref_hide_launcher_icon"
            android:key="pref_hide_launcher_icon"
            android:defaultValue="true" />
        <Preference
            android:icon="@drawable/ic_github"
            android:layout="@layout/card_middle"
            android:title="@string/github"
            android:summary="@string/github_source">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/github_link" />
        </Preference>
        <Preference
            android:icon="@drawable/ic_info_outline"
            android:layout="@layout/card_bottom"
            android:title="@string/pref_about_title"
            android:key="pref_about" />
    </PreferenceCategory>
</PreferenceScreen>
