<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2013-2017 microG Project Team
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:layout="@layout/uwu_lonte_akun"
        android:selectable="false" />

    <PreferenceCategory
        android:title="@string/account_manager_title">

        <SwitchPreference
            android:icon="@drawable/uwu_payload"
            android:title="@string/pref_auth_trust_google_title"
            android:layout="@layout/uwu_top_switch"
            android:key="auth_manager_trust_google"
            android:summary="@string/pref_auth_trust_google_summary"
            android:defaultValue="true" />

        <SwitchPreference
            android:icon="@drawable/uwu_payload"
            android:title="@string/pref_auth_visible_title"
            android:layout="@layout/uwu_mid_switch"
            android:key="auth_manager_visible"
            android:summary="@string/pref_auth_visible_summary"
            android:defaultValue="false" />

        <SwitchPreference
            android:icon="@drawable/uwu_payload"
            android:title="@string/pref_auth_include_android_id_title"
            android:layout="@layout/uwu_mid_switch"
            android:key="auth_include_android_id"
            android:summary="@string/pref_auth_include_android_id_summary"
            android:defaultValue="true" />

        <SwitchPreference
            android:icon="@drawable/uwu_payload"
            android:title="@string/pref_auth_strip_device_name_title"
            android:layout="@layout/uwu_bot_switch"
            android:key="auth_strip_device_name"
            android:summary="@string/pref_auth_strip_device_name_summary"
            android:defaultValue="false" />

    </PreferenceCategory>
</PreferenceScreen>